--- a/templates/export.html.twig
+++ b/templates/export.html.twig
@@ -43,7 +43,7 @@
                             <th>Y</th>
                             <th>Z</th>
                             <th>Type</th>
-                            <th>degré de confiance</th>
+                            <th>Degré de confiance</th>
                             {% if is_admin %}
                                 <th></th>
                             {% endif %}
