--- a/templates/_header_user.html.twig
+++ b/templates/_header_user.html.twig
@@ -9,7 +9,7 @@
     </div>
     <div class="dcnx">
         <ul class="nav navbar-nav ">
-            <li><a href="{{ path('app_security_logout') }}">Dèconnexion [{{ app.user.username }}]</a></li>
+            <li><a href="{{ path('app_security_logout') }}">Dèconnexion [{{ app.user.firstName }}]</a></li>
         </ul>
     </div>
 </div>
