--- a/templates/_sidebar_user.html.twig
+++ b/templates/_sidebar_user.html.twig
@@ -1,13 +1,12 @@
 <div class="cont-sidebar">
 
-    {% if app.request.get('_route') == 'app_idea_map' %}
+    {% if app.request.get('_route') in ['app_idea_map', 'app_idea_import', 'app_idea_export'] %}
         <!-- Le menu cartographique ne devrait s'ouvrir que sur la page carte -->
         <h6 class="titre-li">Outils cartographique :</h6>
         <div class="cont-li">
             <ul class="nav flex-column">
                 <li class="nav-item"><a class="nav-link" href="{{ path('app_idea_import') }}">Importer point</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ path('app_idea_export') }}">Exporter point</a></li>
-                <li class="nav-item"><a class="nav-link" href="/">Evaluer point</a></li>
             </ul>
         </div>
     {% endif %}
