--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -246,13 +246,13 @@ rose{
 .leaflet-control-search .search-tip {
 	margin:2px;
 	padding:2px 4px;
-	display:block;
+	display:table;
 	color:black;
 	background: #eee;
 	border-radius:.25em;
 	text-decoration:none;
 	white-space:nowrap;
-	vertical-align:center;
+	vertical-align:middle;
 }
 .leaflet-control-search .search-button:hover {
 	background-color: #f4f4f4;
