fix messages layout

--- a/templates/messages.html.twig
+++ b/templates/messages.html.twig
@@ -23,11 +23,10 @@
                         {% set sender = sender.fullName %}
                     {% endif %}
                     <ul class="list-group" style="margin-bottom: 10px;">
+                        <b>{{ sender }}:</b> <br> {{ message.message|nl2br }}
                         <div>
-                            <small style="color: lightgrey">Envoyé
-                                le {{ message.createdAt|date('d/m/Y à H:i') }}</small>
+                            <small style="color: lightgrey">{{ message.createdAt|date('d/m/Y à H:i') }}</small>
                         </div>
-                        <b>{{ sender }}:</b> {{ message.message }}
                     </ul>
                 {% endfor %}
 
