--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -252,7 +252,7 @@ rose{
 	border-radius:.25em;
 	text-decoration:none;
 	white-space:nowrap;
-	vertical-align:middle;
+	/* vertical-align:middle; */
 }
 .leaflet-control-search .search-button:hover {
 	background-color: #f4f4f4;
