--- a/templates/forum.html.twig
+++ b/templates/forum.html.twig
@@ -17,7 +17,7 @@
                 <rose>{{ app.user.firstName }}</rose>
             </h3>
             <p class="p-cont">
-                Vous pouvez publier vos commentaires.
+                WTS vous offre un espace de discussion publique ouvert pour tous les participants. 
                 Ceci sera visible pour tout le monde.
             </p>
         </div>
