--- a/public/assets/css/inscription.css
+++ b/public/assets/css/inscription.css
@@ -117,7 +117,8 @@ body {
 .msg-auth{
 	position: absolute;
 	top: 56px;
-	left: 860px;
+	/* left: 860px; */
+	left: 57%;
 	width: 383px;
 	border-radius: 4px;
 	padding-top: 2px;
