--- a/templates/forum.html.twig
+++ b/templates/forum.html.twig
@@ -10,6 +10,7 @@
 {% block body %}
     {% include '_header_user.html.twig' %}
     {% include '_sidebar_user.html.twig' %}
+    {% include '_sidebar_documents.html.twig' %}
 
     <div class="conteneur">
         <div>
