--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,317 +1,406 @@
 body {
-	background: linear-gradient(to bottom right, rgb(247, 242, 242), #bcbdc4);
-	min-height: 100%;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
+    background: linear-gradient(to bottom right, rgb(247, 242, 242), #bcbdc4);
+    min-height: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
+
 /* Début navbar (header) */
-.logo{
-	float: left;
-	width: 360px;
-	height: 48px;
-	margin-top: 1px;
-	margin-left: 95px;
+.logo {
+    float: left;
+    width: 360px;
+    height: 48px;
+    margin-top: 1px;
+    margin-left: 95px;
 }
-.nav-bar-marge{
-	margin-left: 700px;
+
+.nav-bar-marge {
+    margin-left: 700px;
 }
-.dcnx{
-	float: right;
-	margin-right: 85px;
+
+.dcnx {
+    float: right;
+    margin-right: 85px;
 }
+
 /* Fin navbar (header) */
 /* Début sidebar */
-.cont-sidebar{
-	position: fixed;
-	top: 90px;
-	left: 20px;
-	width: 190px;
-	height: 85%;
-	/* background: red; */
+.cont-sidebar {
+    position: fixed;
+    top: 90px;
+    left: 20px;
+    width: 190px;
+    height: 85%;
+    /* background: red; */
 }
-.titre-li{
-	font-weight: bold;
-	line-height: 50%;
-	margin-bottom: 8px;
+
+.titre-li {
+    font-weight: bold;
+    line-height: 50%;
+    margin-bottom: 8px;
 }
-.cont-li{
-	position: relative;
-	width: 180px;
-	margin-top: 5px;
-	margin-bottom: 15px;
-	background: white;
+
+.cont-li {
+    position: relative;
+    width: 180px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    background: white;
 }
-.cont-membre{
-	position: relative;
-	width: 180px;
-	margin-top: 5px;
-	max-height: 61%;
-	margin-bottom: 15px;
-	background: white;
+
+.cont-membre {
+    position: relative;
+    width: 180px;
+    margin-top: 5px;
+    max-height: 61%;
+    margin-bottom: 15px;
+    background: white;
 }
+
 /* Début propriétés de scrollbar */
-.pr0{
-	display: block;
-	overflow: scroll;
-	overflow-x: hidden; 
+.pr0 {
+    display: block;
+    overflow: scroll;
+    overflow-x: hidden;
 }
+
 .pr1::-webkit-scrollbar {
-	width: 8px;
-  }
-  /* Track */
+    width: 8px;
+}
+
+/* Track */
 .pr2::-webkit-scrollbar-track {
-	background: #f1f1f1; 
-  }
-  /* Handle */
+    background: #f1f1f1;
+}
+
+/* Handle */
 .pr3::-webkit-scrollbar-thumb {
-	background: rgb(202, 202, 202); 
-  }
-  /* Handle on hover */
+    background: rgb(202, 202, 202);
+}
+
+/* Handle on hover */
 .pr4::-webkit-scrollbar-thumb:hover {
-	background: rgb(153, 153, 153); 
-  }
+    background: rgb(153, 153, 153);
+}
+
 /* Fin propriétés de scrollbar */
 /* Fin sidebar */
-.conteneur{
-	position: relative;
-	width: 740px;
-	height: auto;
-	left: 330px;
-	top: 75px;
-	padding-bottom: 20px;
-	margin-bottom: 30px;
-	overflow-x: hidden;
-	/* background: rgb(66, 42, 202); */
+.conteneur {
+    position: relative;
+    width: 740px;
+    height: auto;
+    left: 330px;
+    top: 75px;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
+    overflow-x: hidden;
+    /* background: rgb(66, 42, 202); */
 }
-.conteneur-exp{
-	position: relative;
-	width: 900px;
-	height: auto;
-	left: 330px;
-	top: 75px;
-	padding-bottom: 20px;
-	margin-bottom: 30px;
+
+.conteneur-exp {
+    position: relative;
+    width: 900px;
+    height: auto;
+    left: 330px;
+    top: 75px;
+    padding-bottom: 20px;
+    margin-bottom: 30px;
 }
-.titre-accueil{
-	margin-top: 0;
-	margin-bottom: 5px;
+
+.titre-accueil {
+    margin-top: 0;
+    margin-bottom: 5px;
 }
-rose{
-	color: rgb(255, 91, 118);
+
+rose {
+    color: rgb(255, 91, 118);
 }
-.p-cont{
-	font-weight: bold;
-	font-size: 12px;
-	text-align: justify;
-	/* background: yellow; */
+
+.p-cont {
+    font-weight: bold;
+    font-size: 12px;
+    text-align: justify;
+    /* background: yellow; */
 }
-.form-pub{
-	width: 630px;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	/* background: red; */
+
+.form-pub {
+    width: 630px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    /* background: red; */
 }
-.text-area{
-	resize : none;
-	margin-bottom: 5px;
+
+.text-area {
+    resize: none;
+    margin-bottom: 5px;
 }
-.button-pub{
-	position: relative;
-	min-width: 150px;
-	left: 470px;
+
+.button-pub {
+    position: relative;
+    min-width: 150px;
+    left: 470px;
 }
-.pub{
-	position: relative;
-	/* background: green; */
+
+.pub {
+    position: relative;
+    /* background: green; */
 }
-.titre-pub{
-	font-weight: bold;
-	font-size: 13px;
-	margin-bottom: 0px;
+
+.titre-pub {
+    font-weight: bold;
+    font-size: 13px;
+    margin-bottom: 0px;
 }
-.date-pub{
-	font-weight: bold;
-	font-size: 11px;
-	color: rgb(136, 133, 133);
+
+.date-pub {
+    font-weight: bold;
+    font-size: 11px;
+    color: rgb(136, 133, 133);
 }
-.statut-pub{
-	position: relative;
-	display: inline-block;
-	border-radius: 4px;
-	min-width: 220px;
-	max-width: 700px;
-	height: auto;
-	padding: 7px;
-	padding-bottom: 3px;
-	margin-bottom: 15px;
-	background: white;
+
+.statut-pub {
+    position: relative;
+    display: inline-block;
+    border-radius: 4px;
+    min-width: 220px;
+    max-width: 700px;
+    height: auto;
+    padding: 7px;
+    padding-bottom: 3px;
+    margin-bottom: 15px;
+    background: white;
 }
-.liste-pub{
-	margin-top: 3px;
-	padding-left: 0px;
-	margin-bottom: 0px;
+
+.liste-pub {
+    margin-top: 3px;
+    padding-left: 0px;
+    margin-bottom: 0px;
 }
-.liens-pub{
-	display: inline;
-	padding-right: 5px;
+
+.liens-pub {
+    display: inline;
+    padding-right: 5px;
 }
-#map{
-	height: 500px;
+
+#map {
+    height: 500px;
 }
 
 .leaflet-popup-content {
-	text-align: center;
+    text-align: center;
 }
 
 
 .leaflet-container .leaflet-control-search {
-	position:relative;
-	float:left;
-	background:#fff;
-	color:#1978cf;
-	border: 2px solid rgba(0,0,0,0.2);
-	background-clip: padding-box;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border-radius: 4px;
-	background-color: rgba(255, 255, 255, 0.8);
-	z-index:1000;
-	margin-left: 10px;
-	margin-top: 10px;
+    position: relative;
+    float: left;
+    background: #fff;
+    color: #1978cf;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    background-clip: padding-box;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 1000;
+    margin-left: 10px;
+    margin-top: 10px;
 }
-.leaflet-control-search.search-exp {/*expanded*/
-	background: #fff;
-	border: 2px solid rgba(0,0,0,0.2);
-	background-clip: padding-box;
+
+.leaflet-control-search.search-exp { /*expanded*/
+    background: #fff;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    background-clip: padding-box;
 }
+
 .leaflet-control-search .search-input {
-	display:block;
-	float:left;
-	background: #fff;
-	border:1px solid #666;
-	border-radius:2px;
-	height:22px;
-	padding:0 20px 0 2px;
-	margin:4px 0 4px 4px;
+    display: block;
+    float: left;
+    background: #fff;
+    border: 1px solid #666;
+    border-radius: 2px;
+    height: 22px;
+    padding: 0 20px 0 2px;
+    margin: 4px 0 4px 4px;
 }
+
 .leaflet-control-search.search-load .search-input {
-	background: url('../images/loader.gif') no-repeat center right #fff;
+    background: url('../images/loader.gif') no-repeat center right #fff;
 }
+
 .leaflet-control-search.search-load .search-cancel {
-	visibility:hidden;
+    visibility: hidden;
 }
+
 .leaflet-control-search .search-cancel {
-	display:block;
-	width:22px;
-	height:22px;
-	position:absolute;
-	right:28px;
-	margin:6px 0;
-	background: url('../images/search-icon.png') no-repeat 0 -46px;
-	text-decoration:none;
-	filter: alpha(opacity=80);
-	opacity: 0.8;
+    display: block;
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    right: 28px;
+    margin: 6px 0;
+    background: url('../images/search-icon.png') no-repeat 0 -46px;
+    text-decoration: none;
+    filter: alpha(opacity=80);
+    opacity: 0.8;
 }
+
 .leaflet-control-search .search-cancel:hover {
-	filter: alpha(opacity=100);
-	opacity: 1;
+    filter: alpha(opacity=100);
+    opacity: 1;
 }
+
 .leaflet-control-search .search-cancel span {
-	display:none;/* comment for cancel button imageless */
-	font-size:18px;
-	line-height:20px;
-	color:#ccc;
-	font-weight:bold;
+    display: none; /* comment for cancel button imageless */
+    font-size: 18px;
+    line-height: 20px;
+    color: #ccc;
+    font-weight: bold;
 }
+
 .leaflet-control-search .search-cancel:hover span {
-	color:#aaa;
+    color: #aaa;
 }
+
 .leaflet-control-search .search-button {
-	display:block;
-	float:left;
-	width:30px;
-	height:30px;
-	background: url('../images/search-icon.png') no-repeat 4px 4px #fff;
-	border-radius:4px;
+    display: block;
+    float: left;
+    width: 30px;
+    height: 30px;
+    background: url('../images/search-icon.png') no-repeat 4px 4px #fff;
+    border-radius: 4px;
 }
+
 .leaflet-control-search .search-button:hover {
-	background: url('../images/search-icon.png') no-repeat 4px -20px #fafafa;
+    background: url('../images/search-icon.png') no-repeat 4px -20px #fafafa;
 }
+
 .leaflet-control-search .search-tooltip {
-	position:absolute;
-	top:100%;
-	right:0;
-	float:left;
-	list-style: none;
-	padding-left: 0;
-	min-width:120px;
-	max-height:122px;
-	box-shadow: 1px 1px 6px rgba(0,0,0,0.4);
-	background-color: rgba(0, 0, 0, 0.25);
-	z-index:1010;
-	overflow-y:auto;
-	overflow-x:hidden;
-	cursor: pointer;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    float: left;
+    list-style: none;
+    padding-left: 0;
+    min-width: 120px;
+    max-height: 122px;
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.25);
+    z-index: 1010;
+    overflow-y: auto;
+    overflow-x: hidden;
+    cursor: pointer;
 }
+
 .leaflet-control-search .search-tip {
-	margin:2px;
-	padding:2px 4px;
-	display:block;
-	color:black;
-	background: #eee;
-	border-radius:.25em;
-	text-decoration:none;
-	white-space:nowrap;
-	/* vertical-align:middle; */
+    margin: 2px;
+    padding: 2px 4px;
+    display: block;
+    color: black;
+    background: #eee;
+    border-radius: .25em;
+    text-decoration: none;
+    white-space: nowrap;
+    /* vertical-align:middle; */
 }
+
 .leaflet-control-search .search-button:hover {
-	background-color: #f4f4f4;
+    background-color: #f4f4f4;
 }
+
 .leaflet-control-search .search-tip-select,
 .leaflet-control-search .search-tip:hover {
-	background-color: #fff;
+    background-color: #fff;
 }
+
 .leaflet-control-search .search-alert {
-	cursor:pointer;
-	clear:both;
-	font-size:.75em;
-	margin-bottom:5px;
-	padding:0 .25em;
-	color:#e00;
-	font-weight:bold;
-	border-radius:.25em;
+    cursor: pointer;
+    clear: both;
+    font-size: .75em;
+    margin-bottom: 5px;
+    padding: 0 .25em;
+    color: #e00;
+    font-weight: bold;
+    border-radius: .25em;
 }
-	/* Début _sidebar_documents */
-	.docs{
-		position: fixed;
-		padding-top: 10px;
-		top: 100px;
-		right: 50px;
-		width: 190px;
-		height: 80%;
-		/* background:white; */
-	}
-	.titre-docs{
-		font-weight: bold;
-		font-size: 13px;
-		line-height: 35%;
-		margin-left: 6px;
-		margin-bottom: 8px;
-	}
-	.cont-docs{
-		position: relative;
-		width: 180px;
-		margin-top: 5px;
-		margin-bottom: 15px;
-		background: white;
-	}
-	.list-docs{
-		list-style-type: none;
-		padding-top: 5px;
-		padding-left: 10px;
-	}
-	.liens-docs{
-		margin-left: 3px;
-		margin-bottom: 10px;
-	}
-		/* Fin _sidebar_documents */
+
+/* Début _sidebar_documents */
+.docs {
+    position: fixed;
+    padding-top: 10px;
+    top: 100px;
+    right: 50px;
+    width: 190px;
+    height: 80%;
+    /* background:white; */
+}
+
+.titre-docs {
+    font-weight: bold;
+    font-size: 13px;
+    line-height: 35%;
+    margin-left: 6px;
+    margin-bottom: 8px;
+}
+
+.cont-docs {
+    position: relative;
+    width: 180px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    background: white;
+}
+
+.list-docs {
+    list-style-type: none;
+    padding-top: 5px;
+    padding-left: 10px;
+}
+
+.liens-docs {
+    margin-left: 3px;
+    margin-bottom: 10px;
+}
+
+/* Fin _sidebar_documents */
+
+.leaflet-control-fullscreen a {
+    background:#fff url(../images/fullscreen.png) no-repeat 0 0;
+    background-size:26px 52px;
+}
+.leaflet-touch .leaflet-control-fullscreen a {
+    background-position: 2px 2px;
+}
+.leaflet-fullscreen-on .leaflet-control-fullscreen a {
+    background-position:0 -26px;
+}
+.leaflet-touch.leaflet-fullscreen-on .leaflet-control-fullscreen a {
+    background-position: 2px -24px;
+}
+
+/* Do not combine these two rules; IE will break. */
+.leaflet-container:-webkit-full-screen {
+    width:100%!important;
+    height:100%!important;
+}
+.leaflet-container.leaflet-fullscreen-on {
+    width:100%!important;
+    height:100%!important;
+}
+
+.leaflet-pseudo-fullscreen {
+    position:fixed!important;
+    width:100%!important;
+    height:100%!important;
+    top:0!important;
+    left:0!important;
+    z-index:99999;
+}
+
+@media
+(-webkit-min-device-pixel-ratio:2),
+(min-resolution:192dpi) {
+    .leaflet-control-fullscreen a {
+        background-image:url(../images/fullscreen@2x.png);
+    }
+}
